tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_not_in_scope/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Trait Default2 not found
  ┌─ src/main.nr:7:10
  │
7 │     impl Default2 for Foo {
  │          --------
  │

Aborting due to 1 previous error
