tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_check_trait_not_in_scope/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Trait Default2 not found
  ┌─ src/main.nr:7:10
  │
7 │     impl Default2 for Foo {
  │          --------
  │

Aborting due to 1 previous error
